# lecho-arduino-clion

./: CMakeLists.txt  README.md
cmake/: ArduinoConfig.cmake  Utils.cmake
